workloads/polybase-trading/exec-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exec-engine
  namespace: polybase-trading
  labels:
    app.kubernetes.io/name: exec-engine
    app.kubernetes.io/instance: exec-engine-stg
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: exec-engine
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: exec-engine
        app.kubernetes.io/instance: exec-engine-stg
    spec:
      containers:
        - name: exec-engine
          image: ghcr.io/steve-8000/clab-polybase-binance/exec-engine:v1773519590
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9090
