workloads/polybase-trading/polymarket-discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polymarket-discovery
  namespace: polybase-trading
  labels:
    app.kubernetes.io/name: polymarket-discovery
    app.kubernetes.io/instance: polymarket-discovery-stg
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: polymarket-discovery
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: polymarket-discovery
        app.kubernetes.io/instance: polymarket-discovery-stg
    spec:
      containers:
        - name: polymarket-discovery
          image: ghcr.io/steve-8000/clab-polybase-binance/polymarket-discovery:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9090
