workloads/polybase-trading/recorder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recorder
  namespace: polybase-trading
  labels:
    app.kubernetes.io/name: recorder
    app.kubernetes.io/instance: recorder-stg
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: recorder
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: recorder
        app.kubernetes.io/instance: recorder-stg
    spec:
      containers:
        - name: recorder
          image: ghcr.io/steve-8000/clab-polybase-binance/recorder:v1773478189
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9090
